# Excel-Lambda-Examples

./: DependencyPatterns.xlsx  ExamplePolarisMaxDaily.xlsx  README.md  RecursiveLamdaAnswer.xlsx
ExampleExcelLambda/: ExampleVAExcelLambda.csproj  ExampleVAExcelLamdda.sln  PolarisMax.cs  Program.cs
ExampleExcelLambda/Properties/: AssemblyInfo.cs
HaskellVA/: CHANGELOG.md  HaskellVA.cabal  LICENSE
HaskellVA/app/: Main.hs
HaskellVA/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
HaskellVA/src/: Lib.hs  PolarisMax.hs  PolarisMaxDaily.hs
TestHaskell/: TestHaskell.cabal
TestHaskell/app/: Main.hs
TestHaskell/src/: Lib.hs  VA.hs
